changes on entry

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -349,4 +349,8 @@ FFRLevel=FFR_Medium
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 bForceRebuildOnLoad=True
+CellSize=2.000000
+AgentRadius=15.000000
+AgentMaxSlope=60.000000
+CellHeight=1.000000
 
