added planks to a new level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -354,3 +354,6 @@ AgentRadius=15.000000
 AgentMaxSlope=60.000000
 CellHeight=1.000000
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+
